:lipstick: fix github icon's vertical alignment

--- a/src/styles/components/_header.sass
+++ b/src/styles/components/_header.sass
@@ -22,6 +22,9 @@
   @include responsiveness(720p)
     padding: 0 4.8rem 
   
+  &__external-link
+    display: flex
+
   &__external-link path
     transition: fill 0.4s
 
